Re-add compat for curios and CC:Tweaked